# RC2040

./: CMakeLists.txt  Compiling.md  GPIO settings  GPIO settings.md  IDE CPM File format.md  Neopixel.md  RC2040.c  RC2040.h  RC2040.uf2  RC2040P2.uf2  README.md  SerialCPMtools.md  acia.c  acia.h  allophoneDefs.h  allophones.c  backup2orac  base64endecode.c  base64endecode.h  cmptools.md  config.h  cpmcp.c  cpmfs.c  cpmfs.h  cpmls.c  device.h  device_sdfs.c  dictionary.c  dictionary.h  hw_config.c  ide.c  ide.cide_attach  ide.c~  ide.h  ide_backup.h  iniparser.c  iniparser.h  midiNotes.h  serialfile.c  serialfile.h  (+1 more)
.github/: FUNDING.yml
BASIC Examples/: Al2Text.bas  BEEP.BAS  CYLON.BAS  MANDCOL.BAS  Mario.BAS  RC2040.BAS  README.md  TQBFJOLD  TQBFJOTL.BAS  Wargames.bas  flintstn.bas  neotest.bas  rainbow
Circuit dagram/: Wiring
Compliled images/: RC2040.uf2
DiskDefs/: RC2040cf_diskdefs.txt  RC2040img_diskdefs.txt  README.md
SD Card Contents/: CPMIDE.id  README.md  diskdefs  rc2040.ini  rc2040ACIA.ini  rc2040SIO.ini  read.md
libz80/: CMakeLists.txt
libz80/codegen/: mktables  opcodes_impl.c
pico_fatfs-main/: CHANGELOG.md  CMakeLists.txt  README.md  tf_card.c  tf_card.h  tf_card.h~
pico_fatfs-main/fatfs/: ff.c  ff.c~
pico_fatfs-main/fatfs/conf/: ffconf.h  ffconf.h~
pico_fatfs-main/pio/spi/: CMakeLists.txt
pico_fatfs-main/tests/common/: benchmark.cpp  benchmark.h
pico_fatfs-main/tests/test_default/: CMakeLists.txt  README.md  main.cpp
pico_fatfs-main/tests/test_variation1/: CMakeLists.txt  README.md  main.cpp
test/: RC2040.uf2  readme.md
